# ds-mentorship

./: .gitignore  README.md  pyproject.toml
1-feature-and-target-preprocessing/: 1-notebook.ipynb
1-feature-and-target-preprocessing/.ipynb_checkpoints/: housing-dataset-feature-target-preprocessing-checkpoint.ipynb
2-linear-regression-and-trees/: 2-notebook.ipynb
2-linear-regression-and-trees/.ipynb_checkpoints/: 2-linear-regression-and-decision-trees-checkpoint.ipynb  2-notebook-checkpoint.ipynb
3-dimensionality-reduction/: pca.ipynb
4-clustering/: k-means.ipynb
data/: .gitignore
lib/clustering/: k_means.py
lib/evaluation/: cross_validate.py  regression.py
lib/preprocessing/: pca.py  scale.py
